# myblog

./: .gitignore  0.23.0  check_db.sql  database.py  main.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
myblog/src/myblog/models/: __init__.py
myblog/src/myblog/routers/: articles.py  media.py
myblog/src/myblog/templates/: base.html
routers/: auth.py  media.py
src/myblog/: __init__.py  database.py
src/myblog/models/: __init__.py  models.py
src/myblog/routers/: articles.py  auth.py  cards.py  media.py  users.py
src/myblog/templates/: base.html  index.html
src/myblog/templates/articles/: detail.html  list.html
src/myblog/templates/auth/: signup.html
src/myblog/templates/cards/: detail.html  editor.html  list.html
src/myblog/templates/users/: role.html
templates/articles/: editor.html
templates/auth/: login.html
tests/: test_auth.py
