[tool.poetry]
name = "myblog"
version = "0.1.0"
description = "A FastAPI-based blog application"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "myblog"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.104.1"
uvicorn = "0.24.0"
sqlalchemy = "2.0.23"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.6"
markdown = "3.5.1"
jinja2 = "3.1.2"
python-dotenv = "1.0.0"
aiosqlite = "0.19.0"
pydantic = "2.10.6"
pydantic-core = "2.27.2"
greenlet = "3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-asyncio = "0.25.3"
httpx = "0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"